--- a/front/globals.css
+++ b/front/globals.css
@@ -24,11 +24,11 @@
     --bg-edit: var(--color-primary);
 
     /* Spacing */
-    --spacing-1: 0.25rem; /* 4px */
-    --spacing-2: 0.5rem;  /* 8px */
-    --spacing-3: 1rem;    /* 16px */
-    --spacing-4: 1.5rem;  /* 24px */
-    --spacing-5: 3rem;    /* 48px */
+    --spacing-1: 0.375rem; /* 6px */
+    --spacing-2: 0.75rem;  /* 12px */
+    --spacing-3: 1.25rem;  /* 20px */
+    --spacing-4: 1.875rem; /* 30px */
+    --spacing-5: 3.125rem; /* 50px */
 
     /* Borders */
     --border-radius: 4px;
@@ -99,6 +99,11 @@ input, select, textarea {
     border: var(--border);
     width: 100%;
     box-sizing: border-box;
+}
+
+input[type="checkbox"] {
+    width: 20px;
+    height: 20px;
 }
 
 /* Utilities */
